# textdraw

./: Cargo.toml  README.md  api.py  demo.py  pyproject.toml  ruff.toml  test.py
.github/workflows/: release.yml
examples/: connected_boxes.py  letter_box.py  multiple_connected_boxes.py
python/textdraw/: __init__.py  __init__.pyi
src/: astar.rs  lib.rs
