[package]
name = "textdraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "textdraw"
crate-type = ["cdylib"]

[[bin]]
name = "textdraw-demo"
path = "src/main.rs"

[dependencies]
color-art = "0.3.9"
owo-colors = { version = "4.2.1", features = ["supports-color", "supports-colors"] }
pyo3 = "0.25.0"
regex = "1.11.1"
